Overflow:hidden bug fix Squarespace

--- a/static/css/scrollytelling.css
+++ b/static/css/scrollytelling.css
@@ -54,7 +54,6 @@ figure {
   left: 0;
   width: 100%;
   min-height: 480px;
-  top: 0.25rem;
   margin: 0;
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
